--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,49 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./src/scripts/main.js" type="module" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/styles/style.css">
 </head>
 <body>
 
     <button id="logout-button" onclick="logoutUser()">Log Out</button>
-    <!-- <h1>HTTP Methods</h1> -->
-    <!-- <h2>Strapi med CRUD</h2>
-
-    <button onclick="geter()">GET</button>
-    <button onclick="poster()">POST</button>
-    <button onclick="puter()">PUT</button>
-    <button onclick="deleter()">DELETE</button> -->
+  
     <div id="entry-form">
         <h1 id="h1-title">Strapi to-dos</h1>
         <h2 id="h2-title"> Please login or register</h2>
         <div id="entry" class="container">
 
             <div class="buttons">
-                <button class="Login" onclick=displayLogin()> Login</button>
-                <button class=" Register" onclick="displayRegister() ">Register</button>
+                <button class="Login" id="display-login"> Login</button>
+                <button class=" Register" id="display-register" >Register</button>
             </div>
             <div class="inputs">
-                <div class="Name">
-                    <label for="Name">Name</label>
-                    <input type="text" class="Name" name="Name" id="username" placeholder="name">
+                <div class="Name" id="username-div">
+                    <label for="username-input">Name</label>
+                    <input type="text" class="Name" name="Name" id="username-input" placeholder="name">
                 </div>
-                <div class="Password">
-                    <label for="Password">Password</label>
-                    <input type="password" class="Password" name="Password" id="pass">
+                <div class="Password" id="password-div">
+                    <label for="password-input">Password</label>
+                    <input type="password" class="Password" name="Password" id="password-input">
 
                 </div>
-                <div class="Mail" id="mail" style="display:none">
+                <div class="Mail" id="mail-div" style="display:none">
                     <label for="Mail"> Mail</label>
-                    <input type="text" name="Mail" class="Mail" id="mailen">
+                    <input type="text" name="Mail" class="Mail" id="mail-input">
                 </div>
             </div>
 
 
 
 
-            <button class="login-register" id="submit-login" onclick=login()>Login</button>
+            <button class="login-register" id="submit-login" >Login</button>
             <button class="login-register" id="submit-register" style="display:none"
-                onclick=register()>Register</button>
+                >Register</button>
         </div>
 
 
