will need to re-organize strap irelations

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <button id="logout-button" onclick="logoutUser()">Log Out</button>
+    <button id="logout-button" >Log Out</button>
   
     <div id="entry-form">
         <h1 id="h1-title">Strapi to-dos</h1>
@@ -48,7 +48,7 @@
 
     </div>
 
-    <div id="todos">
+    <!-- <div id="todos">
 
         <h2 id="todo-header">Someones List</h2>
         <label for="title"> title</label>
@@ -62,7 +62,7 @@
 
         </ul>
 
-    </div>
+    </div> -->
 
 
 </body>
