Happy easter commented out some old code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,11 @@
     <script src="./src/scripts/main.js" type="module" defer></script>
     <link rel="stylesheet" href="./src/styles/style.css">
 </head>
+
 <body>
 
-    <button id="logout-button" >Log Out</button>
-  
+    <button id="logout-button">Log Out</button>
+
     <div id="entry-form">
         <h1 id="h1-title">Strapi to-dos</h1>
         <h2 id="h2-title"> Please login or register</h2>
@@ -19,7 +21,7 @@
 
             <div class="buttons">
                 <button class="Login" id="display-login"> Login</button>
-                <button class=" Register" id="display-register" >Register</button>
+                <button class=" Register" id="display-register">Register</button>
             </div>
             <div class="inputs">
                 <div class="Name" id="username-div">
@@ -40,9 +42,8 @@
 
 
 
-            <button class="login-register" id="submit-login" >Login</button>
-            <button class="login-register" id="submit-register" style="display:none"
-                >Register</button>
+            <button class="login-register" id="submit-login">Login</button>
+            <button class="login-register" id="submit-register" style="display:none">Register</button>
         </div>
 
 
