header added logout button moved temp logo added potentialy needed functions declared

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,11 +12,14 @@
 
 <body>
 <header>
+<a href="https://www.google.com/">
+    <img src="./src/assets/images/duck-test.png" alt="" height="54px">
+</a>
     <div><h1>Book Worms</h1></div>
-    
+    <button id="logout-button">Log Out</button>
 </header>
    
-<button id="logout-button">Log Out</button>
+
     <div id="entry-form">
        
 
