--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <button id="logout-button">Log Out</button>
 </header>
    
-
+<main>
     <div id="entry-form">
        
 
@@ -56,6 +56,8 @@
     <div id="book-cover">
         <img src="" alt="">
     </div>
+
+</main>
     <!-- <div id="todos">
 
      
