can now display clicked book

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
 
     <div id="index-page">
 
-        <div id="book-cover">
+        <div id="all-books">
             <img src="" alt="">
         </div>
         
@@ -77,7 +77,10 @@
 
 
     <div id="book-page">
-
+<h2>hej</h2>
+<div id="book-cover">
+    
+</div>
     </div>
 <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
 <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
