--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,11 +17,14 @@
 
 <body>
 <header>
-<a href="https://www.google.com/">
+<a href="">
     <img src="./src/assets/images/duck-test.png" alt="" height="54px">
 </a>
     <div><h1>Book Worms</h1></div>
-    <button id="logout-button">Log Out</button>
+    <div id="user-div">
+        <h2 id="active-user"></h2>
+        <button id="logout-button" style="display:none;">Log Out</button>
+    </div>
     <button id="auth-button">Auth</button>
 </header>
    
@@ -45,7 +48,7 @@
 
 <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
 <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
-    <div id="auth-page">
+    <div id="auth-page" style="display:none;" >
         <div id="entry-form">
             <div class="buttons">
                 <button class="Login" id="display-login"> Login</button>
@@ -77,9 +80,9 @@
 
 
     <div id="book-page">
-<h2>hej</h2>
+
 <div id="book-cover">
-    
+
 </div>
     </div>
 <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
