some structure for profile page added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,12 @@
 
       <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
       <div id="profile-page">
-        <div></div>
+        <h3>Your reading list</h3>
+        <div id="reading-list">
+          <ul>
+            <li></li>
+          </ul>
+        </div>
       </div>
 
       <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
