added functionality to get all book ratings feature to calc book ratings

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,12 @@
         <h3>Your reading list</h3>
         <div id="reading-list">
           <ul>
-            <li></li>
+            <li>to-read</li>
+          </ul>
+        </div>
+        <div id="rated-list">
+          <ul>
+            <li>rated</li>
           </ul>
         </div>
       </div>
