more bookpage functionality added calcRating will return object will average rating and totalVoters will display score out of amount of voters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,11 +118,11 @@
           </div>
         </div>
         <div id="book-right">
-          <h2>Title</h2>
-          <h3>author</h3>
-          <div>score</div>
-          <h4>pages</h4>
-          <h4>published date</h4>
+          <h2 id="bp-title">Title</h2>
+          <h3 id="bp-author">author</h3>
+          <div id="bp-score">score</div>
+          <h4 id="bp-pages">pages</h4>
+          <h4 id="bp-published">published date</h4>
         </div>
       </div>
       <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
