will now deal with event where a book has no votes added code to return 0 as value when the total ratings array is empty inside the calcrating function that is

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -113,14 +113,15 @@
               <option value="4">4</option>
               <option value="5">5</option>
             </select>
-            <button id="set-score">set Score</button>
-            <button id="check-score">Test to fetch</button>
+            <!-- <button id="set-score">set Score</button> -->
+            <button id="check-score">Submit Score</button>
           </div>
         </div>
         <div id="book-right">
           <h2 id="bp-title">Title</h2>
           <h3 id="bp-author">author</h3>
-          <div id="bp-score">score</div>
+          <h3 id="bp-score">score</h3>
+          <!-- <span id="total-voters">d</span> -->
           <h4 id="bp-pages">pages</h4>
           <h4 id="bp-published">published date</h4>
         </div>
