removed needless title text on books index page will now only display the book covers and not large divs with the books titles above the same goes for the book-page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
       <div id="book-page">
         <div id="book-left">
           <div id="book-cover"></div>
-          <div id="add-reading">add read</div>
+          <button id="add-reading" class="bp-button">add read</button>
           <div id="add-score">
             <select name="" id="user-score">
               <option value="2" disabled selected>Set Score</option>
@@ -114,7 +114,7 @@
               <option value="5">5</option>
             </select>
             <!-- <button id="set-score">set Score</button> -->
-            <button id="check-score">Submit Score</button>
+            <button id="submit-score" class="bp-button">Submit Score</button>
           </div>
         </div>
         <div id="book-right">
