options to add to readinglist and vote are hidden if not logged in if there is time, will make popup that asks user to login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,12 +40,12 @@
       <div id="profile-page">
         <h3>Your reading list</h3>
         <div id="reading-list">
-          
           <ul>
             <li>to-read</li>
           </ul>
         </div>
         <div id="rated-list">
+          <h3>Your reading list</h3>
           <ul>
             <li>rated</li>
           </ul>
