will print the users rated books and their score

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,17 +38,17 @@
 
       <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
       <div id="profile-page">
-        <h3>Your reading list</h3>
         <div id="reading-list">
-          <ul>
+          <h3>Your reading list</h3>
+          <!-- <ul>
             <li>to-read</li>
-          </ul>
+          </ul> -->
         </div>
         <div id="rated-list">
-          <h3>Your reading list</h3>
-          <ul>
+          <h3>Your rated list</h3>
+          <!-- <ul>
             <li>rated</li>
-          </ul>
+          </ul> -->
         </div>
       </div>
 
