displaying user profile page with tables will display the users to-read and rated books in the form of a table will make a function for renderign tables with book array/objects as arguments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,45 @@
       <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
       <div id="profile-page">
         <div id="reading-list">
+          <table>
+            <thead id="books-table-head">
+              <tr>
+                <th>cover <img src="" alt="" /></th>
+                <th>title</th>
+                <th>author</th>
+                <th>avg rating</th>
+                <th>rating</th>
+              </tr>
+            </thead>
+            <tbody id="books-table-body">
+              <tr>
+                <td>
+                  <img
+                    src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546071216i/5907.jpg"
+                    alt=""
+                    width="50px"
+                  />
+                </td>
+                <td>Lord of da ring</td>
+                <td>Señor tolkien</td>
+                <td>4.5</td>
+                <td>2</td>
+              </tr>
+              <tr>
+                <td>
+                  <img
+                    src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546071216i/5907.jpg"
+                    alt=""
+                    width="50px"
+                  />
+                </td>
+                <td>Lord of da ring</td>
+                <td>Señor tolkien</td>
+                <td>4.5</td>
+                <td>2</td>
+              </tr>
+            </tbody>
+          </table>
           <h3>Your reading list</h3>
           <!-- <ul>
             <li>to-read</li>
