--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,8 +39,9 @@
       <!-- -- -- ---- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
       <div id="profile-page">
         <div id="reading-list">
+          <h3>Your reading list</h3>
           <table>
-            <thead id="books-table-head">
+            <thead id="books-thead">
               <tr>
                 <th>cover <img src="" alt="" /></th>
                 <th>title</th>
@@ -49,8 +50,8 @@
                 <th>rating</th>
               </tr>
             </thead>
-            <tbody id="books-table-body">
-              <tr>
+            <tbody id="reading-list-tbody">
+              <!-- <tr>
                 <td>
                   <img
                     src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546071216i/5907.jpg"
@@ -75,10 +76,10 @@
                 <td>Señor tolkien</td>
                 <td>4.5</td>
                 <td>2</td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
-          <h3>Your reading list</h3>
+        
           <!-- <ul>
             <li>to-read</li>
           </ul> -->
