rating added to rating list, tables now aligned

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
         <div id="reading-list">
           <h3>Your reading list</h3>
           <table>
-            <thead id="books-thead">
+            <thead id="reading-list-thead">
               <tr>
                 <th>cover <img src="" alt="" /></th>
                 <th>title</th>
@@ -50,16 +50,27 @@
                 <th>rating</th>
               </tr>
             </thead>
-            <tbody id="reading-list-tbody">
-            </tbody>
+            <tbody id="reading-list-tbody"></tbody>
           </table>
-        
+
           <!-- <ul>
             <li>to-read</li>
           </ul> -->
         </div>
         <div id="rated-list">
           <h3>Your rated list</h3>
+          <table>
+            <thead id="rated-list-thead">
+              <tr>
+                <th>cover <img src="" alt="" /></th>
+                <th>title</th>
+                <th>author</th>
+                <th>avg rating</th>
+                <th>rating</th>
+              </tr>
+            </thead>
+            <tbody id="rated-list-tbody"></tbody>
+          </table>
           <!-- <ul>
             <li>rated</li>
           </ul> -->
