fixed profile page visual bug fixed bug where profile page would render list several times upon username click

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
           </ul> -->
         </div>
         <div id="rated-list">
-          <h3>Your rated list</h3>
+          <h3>Your rated Books</h3>
           <table>
             <thead id="rated-list-thead">
               <tr>
