added avg rating properties to readingList books and ratedlist books

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,11 +43,11 @@
           <table>
             <thead id="reading-list-thead">
               <tr>
-                <th>cover <img src="" alt="" /></th>
-                <th>title</th>
-                <th>author</th>
-                <th>avg rating</th>
-                <th>your rating</th>
+                <th >cover <img src="" alt="" /></th>
+                <th id="reading-list-title">title</th>
+                <th id="reading-list-author">author</th>
+                <th id="reading-list-avg-rating">avg rating</th>
+                <th id="reading-list-user-rating">your rating</th>
               </tr>
             </thead>
             <tbody id="reading-list-tbody"></tbody>
