Theme change functionality added theme will now change depending on the value of theme set from the admin panel function to fetch theme added function to get use getTheme function and then apply it as a class to the body added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,12 +14,13 @@
 
   <body>
     <header>
-      <a href="">
-        <img src="./src/assets/images/duck-test.png" alt="" height="54px" />
-      </a>
       <div>
-        <h1>Book Worms</h1>
+        <a href="">
+          <img src="./src/assets/images/duck-test.png" alt="" height="54px" />
+        </a>
       </div>
+      <h1>Book Worms</h1>
+
       <div id="user-div">
         <h2 id="active-user"></h2>
         <button id="logout-button" style="display: none">Log Out</button>
@@ -48,6 +49,7 @@
                 <th id="reading-list-author">author</th>
                 <th id="reading-list-avg-rating">avg rating</th>
                 <th id="reading-list-user-rating">your rating</th>
+                <th id="reading-list--">modify</th>
               </tr>
             </thead>
             <tbody id="reading-list-tbody"></tbody>
