average rating of a book is now being displayed in the form of stars

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -179,7 +179,18 @@
         <div id="book-right">
           <h1 id="bp-title">Title</h1>
           <h3 id="bp-author">author</h3>
-          <h3 id="bp-score">score</h3>
+          <div class="rating2">
+            <div class="rating-stars-wrapper">
+              <div class="rating-stars">
+                <div class="rating-stars-filled" id="rating-stars-filled">
+                  ★★★★★
+                </div>
+                <div class="rating-stars-empty">★★★★★</div>
+              </div>
+            </div>
+            <span id="bp-score">score</span>
+          </div>
+          <span id="bp-ratings">score</span>
           <!-- <span id="total-voters">d</span> -->
           <h4 id="bp-pages">pages</h4>
           <h4 id="bp-published">published date</h4>
