changed button styling, added text to active user

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,10 +19,9 @@
           <img src="./src/assets/images/duck-test.png" alt="" height="54px" />
         </a>
       </div>
-      <h1>Book Worms</h1>
-
+      <a href=""><h1>Book Worms</h1></a>
+      <h2 id="active-user"></h2>
       <div id="user-div">
-        <h2 id="active-user"></h2>
         <button id="logout-button" style="display: none">Log Out</button>
       </div>
       <button id="auth-button">Auth</button>
