added some images and conditions added imagages to the header the images will be either dark or light depending on selected theme

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,15 +16,36 @@
     <header>
       <div>
         <a href="">
-          <img src="./src/assets/images/duck-test.png" alt="" height="54px" />
+          <img src="./src/assets/images/orange duck.png" alt="" height="54px" />
         </a>
       </div>
       <a href=""><h1>Book Worms</h1></a>
-      <h2 id="active-user"></h2>
-      <div id="user-div">
-        <button id="logout-button" style="display: none">Log Out</button>
+      <div>
+        <img src="" alt="" height="40px" id="user-logo" />
+
+        <span id="active-user"></span>
       </div>
-      <button id="auth-button">Auth</button>
+
+      <div id="user-div">
+        <button id="logout-button" style="display: none">
+          <img
+            src="src/assets/images/logout white.png"
+            alt=""
+            height="40px"
+            id="logout-logo"
+          />
+          Log Out
+        </button>
+      </div>
+      <button id="auth-button">
+        <img
+          src="src/assets/images/login white.png"
+          alt=""
+          height="40px"
+          id="login-logo"
+        />
+        <span>Log in / Sign up</span>
+      </button>
     </header>
 
     <main id="main">
